--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <div class="teclado--botao">0</div>
              </div>
              <div class="teclado--linha">
-                <div class="teclado--botao teclado--botao--branco">BRANCO</div>
-                <div class="teclado--botao teclado--botao--corrigir">CORRIGIR</div>
-                <div class="teclado--botao teclado--botao--confirmar">CONFIRMA</div>
+                <div class="teclado--botao botao--branco">BRANCO</div>
+                <div class="teclado--botao botao--corrige">CORRIGE</div>
+                <div class="teclado--botao botao--confirma">CONFIRMA</div>
              </div>
         </div>
     </div>
