--- a/index.html
+++ b/index.html
@@ -10,33 +10,67 @@
 <body>
     <div class="urna">
         <div class="tela">
-            ...
-        </div>
-        <div class="teclado">
-             <div class="teclado--linha">
-                <div class="teclado--botao">1</div>
-                <div class="teclado--botao">2</div>
-                <div class="teclado--botao">3</div>
-             </div>
-             <div class="teclado--linha">
-                <div class="teclado--botao">4</div>
-                <div class="teclado--botao">5</div>
-                <div class="teclado--botao">6</div>
-             </div>
-             <div class="teclado--linha">
-                <div class="teclado--botao">7</div>
-                <div class="teclado--botao">8</div>
-                <div class="teclado--botao">9</div>
-             </div>
-             <div class="teclado--linha">
-                <div class="teclado--botao">0</div>
-             </div>
-             <div class="teclado--linha">
-                <div class="teclado--botao botao--branco">BRANCO</div>
-                <div class="teclado--botao botao--corrige">CORRIGE</div>
-                <div class="teclado--botao botao--confirma">CONFIRMA</div>
-             </div>
+            <div class="d-1">
+               <div class="d-1-left">
+                  <div class="d-1-1">
+                     <span>SEU VOTO PARA</span>
+                  </div>
+                  <div class="d-1-2">
+                     <span>PREFEITO</span>
+                  </div>
+                  <div class="d-1-3">
+                     <div class="numero pisca"></div>
+                     <div class="numero"></div>
+                  </div>
+                  <div class="d-1-4">
+                     Nome: FULANO DA SILVA<br />
+                     Partido: PQC<br />
+                     Vice-Prefeito: BELTRANO OLIVEIRA
+                  </div>
+               </div>
+                  <div class="d-1-right">
+                     <div class="d-1-image"><img src="images/84.png">
+                        Prefeito
+                     </div>
+                     <div class="d-1-image small"><img src="images/84_2.png">
+                        Vice-Prefeito
+                     </div>
+                  </div>
+                  </div>
+                  <div class="d-2">
+                     Aperte a Tecla:<br />
+                     CONFIRMA para CONFIRMAR este voto<br />
+                     CORRIGE para REINICIAR este voto<br />
+                  </div>
+            </div>
+            <div class="teclado">
+                 <div class="teclado--linha">
+                    <div class="teclado--botao">1</div>
+                    <div class="teclado--botao">2</div>
+                    <div class="teclado--botao">3</div>
+                 </div>
+                 <div class="teclado--linha">
+                    <div class="teclado--botao">4</div>
+                    <div class="teclado--botao">5</div>
+                    <div class="teclado--botao">6</div>
+                 </div>
+                 <div class="teclado--linha">
+                    <div class="teclado--botao">7</div>
+                    <div class="teclado--botao">8</div>
+                    <div class="teclado--botao">9</div>
+                 </div>
+                 <div class="teclado--linha">
+                    <div class="teclado--botao">0</div>
+                 </div>
+                 <div class="teclado--linha">
+                    <div class="teclado--botao botao--branco">BRANCO</div>
+                    <div class="teclado--botao botao--corrige">CORRIGE</div>
+                    <div class="teclado--botao botao--confirma">CONFIRMA</div>
+                 </div>
+            </div>
         </div>
     </div>
+   <script src="./js/etapas.js"></script>
+   <script src="./js/script.js"></script>
 </body>
 </html>
